test_regress/t/t_queue_slice.out
%Error-UNSUPPORTED: t/t_queue_slice.v:21:11: Unsupported: Empty '{}
   21 |       q = '{};
      |           ^~
%Error: Exiting due to
